RESOLVED FIXED85647
box-shadow causes overlay scrollbars to be in the wrong position when element is composited
https://bugs.webkit.org/show_bug.cgi?id=85647
Summary box-shadow causes overlay scrollbars to be in the wrong position when element...
Thomas Fuchs
Reported 2012-05-04 11:49:56 PDT
Created attachment 140290 [details] reduced test case Using CSS `box-shadow` on an element that shows scrollbars (overflow: auto) can cause the scrollbars of the element to appear in the wrong position. A related problem is that in the provided reduced test case, enabling hardware acceleration for the parent element causes the child's scrollbars to disappear completely. This problem happens in both the latest release version of Chrome and in the Safari 5.2 beta (I could not test on Safari 5.1, but it is likely to be a problem there too).
Attachments
reduced test case (1.29 KB, text/html)
2012-05-04 11:49 PDT, Thomas Fuchs
no flags
Patch (9.00 KB, patch)
2012-09-07 14:47 PDT, Simon Fraser (smfr)
jamesr: review+
Radar WebKit Bug Importer
Comment 1 2012-05-04 11:52:16 PDT
Simon Fraser (smfr)
Comment 2 2012-05-04 11:57:40 PDT
I can't find any code that positions the scrollbar layers in RenderLayerBacking. Weird.
Simon Fraser (smfr)
Comment 3 2012-09-07 14:47:51 PDT
Simon Fraser (smfr)
Comment 4 2012-09-07 17:49:00 PDT
Note You need to log in before you can comment on or make changes to this bug.